[gd_scene load_steps=11 format=2]

[ext_resource path="res://Deck/CombatDeck.gd" type="Script" id=1]
[ext_resource path="res://Card/CardSprites/cardBack.png" type="Texture" id=2]
[ext_resource path="res://Map/whitesquare.png" type="Texture" id=3]
[ext_resource path="res://TIMESS__.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Card/CardSprites/cardShadow.png" type="Texture" id=5]
[ext_resource path="res://Card/CardSprites/card_Reshuffle.png" type="Texture" id=6]
[ext_resource path="res://UI/Shapes/squareglow.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 79, 109 )

[node name="Node2D" type="Node2D"]
z_index = 6
script = ExtResource( 1 )

[node name="Draw" type="Sprite" parent="."]
visible = false
position = Vector2( 622, 672 )
scale = Vector2( 0.2, 0.2 )
z_index = 20
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="Draw"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -0.00012207, 0.00012207 )
scale = Vector2( 1.2295, 1.14145 )
z_index = -1
texture = ExtResource( 5 )

[node name="Discard" type="Sprite" parent="."]
visible = false
position = Vector2( 388, 672 )
scale = Vector2( 0.2, 0.2 )
z_index = 20
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="Discard"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( 0, -10 )
scale = Vector2( 1.2295, 1.14145 )
z_index = -1
texture = ExtResource( 5 )

[node name="Reshuffle" type="Node2D" parent="."]
visible = false
position = Vector2( 139, 757 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="Reshuffle"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1, 2 )
scale = Vector2( 0.251333, 0.233333 )
texture = ExtResource( 5 )

[node name="Top" type="Node2D" parent="Reshuffle"]

[node name="cardSprite" type="Sprite" parent="Reshuffle/Top"]
scale = Vector2( 0.199833, 0.199833 )
texture = ExtResource( 6 )

[node name="nameBack" type="Sprite" parent="Reshuffle/Top"]
visible = false
modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( -0.500003, -80 )
scale = Vector2( 0.139, 0.0384583 )
texture = ExtResource( 3 )

[node name="nameText" type="Label" parent="Reshuffle/Top"]
margin_left = -67.0
margin_top = -95.0
margin_right = 69.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Shuffle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descriptionText" type="Label" parent="Reshuffle/Top"]
margin_left = -67.0
margin_top = -54.0001
margin_right = 60.0
margin_bottom = 42.9999
custom_fonts/font = SubResource( 2 )
text = "Shuffles your deck if you have no usable cards in hand."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="Reshuffle"]
visible = false
modulate = Color( 0.862745, 0.772549, 0.662745, 0.117647 )
margin_left = -89.0
margin_top = -119.0
margin_right = 1671.0
margin_bottom = 2241.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shuffleButton" type="TextureButton" parent="Reshuffle"]
margin_left = -79.0
margin_top = -109.0
margin_right = 79.0
margin_bottom = 109.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shuffleCardArea" type="Area2D" parent="Reshuffle"]
visible = false

[node name="cardCollision" type="CollisionShape2D" parent="Reshuffle/shuffleCardArea"]
shape = SubResource( 3 )
disabled = true

[node name="Flee" type="Node2D" parent="."]
visible = false
position = Vector2( 916, 757 )
__meta__ = {
"_edit_group_": true
}

[node name="Shadow" type="Sprite" parent="Flee"]
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1, 2 )
scale = Vector2( 0.251333, 0.233333 )
texture = ExtResource( 5 )

[node name="Top" type="Node2D" parent="Flee"]

[node name="cardSprite" type="Sprite" parent="Flee/Top"]
scale = Vector2( 0.199833, 0.199833 )
texture = ExtResource( 6 )

[node name="nameBack" type="Sprite" parent="Flee/Top"]
visible = false
modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( -0.500003, -80 )
scale = Vector2( 0.139, 0.0384583 )
texture = ExtResource( 3 )

[node name="nameText" type="Label" parent="Flee/Top"]
margin_left = -67.0
margin_top = -95.0
margin_right = 69.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Flee"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descriptionText" type="Label" parent="Flee/Top"]
margin_left = -67.0
margin_top = -54.0001
margin_right = 60.0
margin_bottom = 42.9999
custom_fonts/font = SubResource( 2 )
text = "End combat without reward."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glow" type="NinePatchRect" parent="Flee"]
visible = false
modulate = Color( 0.862745, 0.772549, 0.662745, 0.117647 )
margin_left = -89.0
margin_top = -119.0
margin_right = 1671.0
margin_bottom = 2241.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
patch_margin_left = 188
patch_margin_top = 186
patch_margin_right = 188
patch_margin_bottom = 204
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fleeButton" type="TextureButton" parent="Flee"]
margin_left = -79.0
margin_top = -109.0
margin_right = 79.0
margin_bottom = 109.0
focus_mode = 0
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fleeCardArea" type="Area2D" parent="Flee"]
visible = false

[node name="cardCollision" type="CollisionShape2D" parent="Flee/fleeCardArea"]
shape = SubResource( 3 )
disabled = true
[connection signal="pressed" from="Reshuffle/shuffleButton" to="." method="_on_shuffleButton_pressed"]
[connection signal="area_entered" from="Reshuffle/shuffleCardArea" to="." method="_on_shuffleCardArea_area_entered"]
[connection signal="area_exited" from="Reshuffle/shuffleCardArea" to="." method="_on_shuffleCardArea_area_exited"]
[connection signal="pressed" from="Flee/fleeButton" to="." method="_on_fleeButton_pressed"]
[connection signal="area_entered" from="Flee/fleeCardArea" to="." method="_on_fleeCardArea_area_entered"]
[connection signal="area_exited" from="Flee/fleeCardArea" to="." method="_on_fleeCardArea_area_exited"]
